change font-size unit for header

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -13,7 +13,7 @@ html, body {
   padding: 25vw;
   text-align: center;
   font-weight: bold;
-  font-size: 150%;
+  font-size: 20vw;
 }
 #content {
   height: 80vh;
