--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ html, body {
 	align-items: center;
 	justify-content: center;
 	font-size: 2vw;
-	background-position: top center;
+	background-position: bottom center;
 }
 /* this stuff is for using webp */
 .no-webp #header, .no-js #header {
