--- a/datapacks/css/styles.css
+++ b/datapacks/css/styles.css
@@ -118,7 +118,7 @@ footer {
 .card {
 	width: 350px;
 	height: 225px;
-	margin: 1.5vw;
+	margin: 10px;
 	margin-top: 1.5vw;
 	background-color: var(--surface-colour);
 	padding: 2%;
@@ -175,29 +175,37 @@ footer {
 }
 .card-tag {
 	width: auto;
-	padding-top: 0.25vw;
-	padding-bottom: 0.25vw;
-	padding-left: 1vw;
-	padding-right: 1vw;
-	margin-top: 0.5vw;
-	margin-bottom: 0.5vw;
-	margin-right: 0.75vw;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 4px;
+	padding-right: 4px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-right: 8px;
 	text-align: center;
 	border-radius: 5px;
-	font-size: 1vw;
+	font-size: 60%;
 	background-color: var(--secondary-color);
 	color: var(--text-on-secondary);
 	font-weight: bold;
 }
 .card-footer-bottom {
 	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: flex-start;
 }
-.card-download-btn {
+.card-btns {
+	flex: 1;
 	align-self: flex-end;
+	display: flex;
+	align-items: flex-end;
+	justify-content: center;
+}
+.card-btn {
+	flex: 1;
 }
 
 /* ALLLL the media queries! */
