--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -17,6 +17,7 @@
   color: var(--text-color);
   font-family: Arial, Helvetica, sans-serif;
   font-size: var(--normal-text-size);
+  box-sizing: border-box;
 }
 html, body, .full-height {
   height: 100%;
@@ -24,7 +25,10 @@ html, body, .full-height {
 
 #notes-input {
   width: 100%;
+  min-width: 100%;
   height: 100%;
+  min-height: 100%;
+  border: 1px solid var(--bg-color);
   resize: none;
 }
 #todos {
