--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -28,7 +28,9 @@ html, body, .full-height {
   min-width: 100%;
   height: 100%;
   min-height: 100%;
-  border: 1px solid var(--bg-color);
+  border: 1px solid var(--secondary-background-color);
+  color: var(--text-color);
+  font-size: var(--normal-text-size);
   resize: none;
 }
 #todos {
