--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -19,8 +19,12 @@
   font-size: var(--normal-text-size);
   box-sizing: border-box;
 }
-html, body, .full-height {
+html, body {
   height: 100%;
+}
+.full-height {
+  height: 100%;
+  width: 100%;
 }
 
 #notes-input {
