--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -28,11 +28,12 @@ html, body {
 }
 
 #notes-input {
+  margin: 10%;
   width: 100%;
   min-width: 100%;
   height: 100%;
   min-height: 100%;
-  border: 1px solid var(--secondary-background-color);
+  border: 5px solid var(--secondary-background-color);
   color: var(--text-color);
   font-size: var(--normal-text-size);
   resize: none;
