--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -28,12 +28,16 @@ html, body {
 }
 
 #notes-input {
-  margin: 10%;
+  margin: 5%;
+  margin-left: 10vw;
+  margin-right: 10vw;
   width: 100%;
   min-width: 100%;
   height: 100%;
   min-height: 100%;
-  border: 5px solid var(--secondary-background-color);
+  border: 5px solid var(--text-color);
+  border-radius: 4px;
+  padding: 10%;
   color: var(--text-color);
   font-size: var(--normal-text-size);
   resize: none;
