--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -29,16 +29,15 @@ html, body {
 
 #notes-input {
   margin: 5%;
-  margin-left: 10vw;
-  margin-right: 10vw;
   width: 100%;
   min-width: 100%;
   height: 100%;
   min-height: 100%;
   border: 5px solid var(--text-color);
   border-radius: 4px;
-  padding: 10%;
+  padding: 30px;
   color: var(--text-color);
+  background-color: var(--secondary-background-color);
   font-size: var(--normal-text-size);
   resize: none;
 }
