--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -27,13 +27,19 @@ html, body {
   width: 100%;
 }
 
+main {
+  width: 100%;
+  height: 100%;
+  padding: 5%;
+  text-align: center;
+}
+
 #notes-input {
-  margin: 5%;
   width: 100%;
   min-width: 100%;
   height: 100%;
   min-height: 100%;
-  border: 5px solid var(--text-color);
+  border: 3px solid var(--text-color);
   border-radius: 4px;
   padding: 30px;
   color: var(--text-color);
