--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -37,15 +37,15 @@ main {
 #notes-input {
   width: 100%;
   min-width: 100%;
-  height: 100%;
-  min-height: 100%;
+  /*height: 100%;*/
+  min-height: 500%;
   border: 3px solid var(--text-color);
   border-radius: 4px;
   padding: 30px;
   color: var(--text-color);
   background-color: var(--secondary-background-color);
   font-size: var(--normal-text-size);
-  resize: none;
+  resize: vertical;
 }
 #todos {
   display: none;
