--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -36,9 +36,7 @@ main {
 
 #notes-input {
   width: 100%;
-  min-width: 100%;
-  /*height: 100%;*/
-  min-height: 500%;
+  height: 100%;
   border: 3px solid var(--text-color);
   border-radius: 4px;
   padding: 30px;
