--- a/outlinr/css/outlinr.css
+++ b/outlinr/css/outlinr.css
@@ -3,8 +3,8 @@
   --background-color: #ffffff;
   --secondary-background-color: #fffeed;
   --highlight-color: #00fff3;
-  --normal-text-size: 2vh;
-  --big-text-size: 4vh;
+  --normal-text-size: 3vw;
+  --big-text-size: 5vw;
 }
 #scripts {
   display: none;
@@ -27,6 +27,13 @@ html, body {
   width: 100%;
 }
 
+h1 {
+  font-size: var(--big-text-size);
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+}
+
 main {
   width: 100%;
   height: 100%;
@@ -39,7 +46,7 @@ main {
   height: 100%;
   border: 3px solid var(--text-color);
   border-radius: 4px;
-  padding: 30px;
+  padding: 2vw;
   color: var(--text-color);
   background-color: var(--secondary-background-color);
   font-size: var(--normal-text-size);
