--- a/datapacks/css/dp_icons.css
+++ b/datapacks/css/dp_icons.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'dp_icons';
+  font-family: 'dp-icons';
   src: url('../fonts/icons/dp_icons.eot?59970938');
   src: url('../fonts/icons/dp_icons.eot?59970938#iefix') format('embedded-opentype'),
        url('../fonts/icons/dp_icons.woff2?59970938') format('woff2'),
