--- a/datapacks/css/dp_icons.css
+++ b/datapacks/css/dp_icons.css
@@ -41,7 +41,7 @@
   line-height: 1em;
  
   /* you can be more comfortable with increased icons size */
-  font-size: 120%;
+  /*font-size: 120%;*/
  
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
