--- a/datapacks/css/styles.css
+++ b/datapacks/css/styles.css
@@ -94,15 +94,14 @@ header {
 	flex-direction: row;
 	background-color: var(--primary-color);
 	color: var(--text-colour);
-	font-weight: bold;
-	font-size: 2vw;
 }
 header h1 {
 	text-align: center;
+	font-weight: bold;
+	font-size: 2vw;
 }
 #help-btn {
-	justify-self: flex-end;
-	margin: 1%;
+	align-self: flex-end;
 	font-size: 120%;
 }
 
