--- a/datapacks/css/styles.css
+++ b/datapacks/css/styles.css
@@ -134,6 +134,10 @@ footer {
 	padding: 2%;
 	box-shadow: 0px 0px 17px -3px rgba(0,0,0,0.75);
 	border-radius: 2px;
+	transition-duration: 100ms;
+}
+.card:hover, .card:focus {
+	box-shadow: 0px 0px 40px -3px rgba(40,40,40,1);
 }
 
 .card-header {
