--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -4,6 +4,8 @@
 *
 * Basicly coppied from my datapacks page lol
 *
+* Also epic colour palete generator: https://coolors.co/
+*
 **/
 
 /* setup */
@@ -30,42 +32,15 @@ html, body {
 /* main styles */
 
 /* custom tooltips: https://codepen.io/shimdim/pen/NjyNNb */
-[class$="_icon"] {
-	color: var(--text-colour);
-	cursor: pointer;
-}
-[data-title] {
-	position: relative;
-	cursor: help;
-	text-decoration: underline dotted var(--text-on-secondary);
-}
-[data-title]::before {
-	opacity: 0%;
-	transition: opacity 500ms;
-	content: attr(data-title);
-	position: absolute;
-	right: 2px;
-	display: inline-block;
-	padding: 3px 6px;
-	border-radius: 2px;
-	background: var(--secondary-color);
-	color: var(--text-on-secondary);
-	font-size: 12px;
-	font-family: sans-serif;
-	white-space: nowrap;
-}
-[data-title]:hover::before {
-	opacity: 100%;
-}
-
 a {
-	color: var(--primary-color);
+	color: var(--secondary-color);
 	transition-duration: 25ms;
 	text-decoration: none;
 }
 a:hover, a:focus {
-	color: var(--secondary-color);
+	color: var(--text-on-secondary);
 	text-decoration: underline;
+	cursor: pointer;
 }
 
 #app {
@@ -98,10 +73,6 @@ header h1 {
 	text-align: center;
 	font-weight: bold;
 }
-#help-btn {
-	align-self: flex-end;
-	font-size: 120%;
-}
 
 footer {
 	width: 100%;
@@ -114,7 +85,7 @@ footer {
 	font-size: 2vw;
 }
 
-#dp-list {
+#proj-list {
 	width: 100%;
 	min-height: 100%;
 	flex: 1;
@@ -268,22 +239,4 @@ footer {
 	footer {
 		font-size: 5vw;
 	}
-}
-/* loader */
-.loader {
-	height: 100%;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: var(--primary-color);
-	color: var(--text-on-primary);
-	font-size: 5vw;
-	flex-wrap: wrap;
-}
-[v-cloak], .loader {
-	display: none;
-}
-[v-cloak] .loader {
-	display: flex !important;
 }
