--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -120,8 +120,11 @@ footer {
 	padding: 1vw;
 }
 .card-title {
-	font-size: 140%;
+	font-size: 130%;
 	font-weight: bold;
+}
+.card-date {
+	
 }
 
 .card-icon {
@@ -171,7 +174,7 @@ footer {
 	color: var(--text-on-secondary);
 	font-weight: bold;
 }
-.card-footer-bottom {
+.card-footer {
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -179,8 +182,9 @@ footer {
 	align-items: center;
 	justify-content: flex-start;
 }
-.card-btn {
-	flex: 1;
+.card-date {
+	font-size: 110%;
+	justify-self: flex-end;
 }
 
 /* ALLLL the media queries! */
