--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -211,6 +211,20 @@ footer {
 		padding-top: 1%;
 		padding-bottom: 1%;
 	}
+	.card {
+		height: 275px;
+		width: 375px;
+	}
+	.card-header {
+		font-size: 130%;
+	}
+	.card-content {
+		font-size: 100%;
+		height: 60%;
+	}
+	.card-tag {
+		font-size: 90%;
+	}
 }
 @media (max-width: 700px) {
 	header {
@@ -220,8 +234,8 @@ footer {
 		font-size: 2vw;
 	}
 	.card-icon {
-		width: 60px;
-		height: 60px;
+		width: 50px;
+		height: 50px;
 	}
 }
 @media (max-width: 400px) {
