--- a/branding/css/styles.css
+++ b/branding/css/styles.css
@@ -5,7 +5,7 @@
   border: 0;
   box-sizing: border-box;
 }
-html, css, #treeleg {
+html, body, #treeleg {
   height: 100%;
   width: 100%;
   background-color: #000000;
