--- a/branding/css/styles.css
+++ b/branding/css/styles.css
@@ -1,4 +1,13 @@
 /* setup */
+:root {
+	--eerie-black: #1E1C1E;
+	--dim-gray: #6D6061;
+	--blue-green: #3095BE;
+	--cinereous: #A18D8D;
+	--red-pigment: #EC1516;
+	--text: #FFFFFF;
+	--bg: #000000;
+}
 * {
   margin: 0;
   padding: 0;
@@ -8,72 +17,75 @@
 html, body, #treeleg {
   height: 100%;
   width: 100%;
-  background-color: #000000;
+  background-color: var(--bg);
+  color: var(--text);
 }
 
 /* main styles */
-:root {
-  --rocket-metallic: #988988;
-  --blue-sapphire: #025B87;
-  --capri: #05BFFA;
-  --black: #000000;
-  --ou-crimson-red: #851314;
-  --red-ryb: #FE1515;
-  --white-text: #FFFFFF;
-}
-
-.rocket-metallic {
-  background-color: var(--rocket-metallic);
-  color: var(--white-text);
-}
-.blue-sapphire {
-  background-color: var(--blue-sapphire);
-  color: var(--white-text);
-}
-.capri {
-  background-color: var(--capri);
-  color: var(--white-text);
-}
-.black {
-  background-color: var(--ou-crimson-red);
-  color: var(--white-text);
-}
-.ou-crimson-red {
-  background-color: var(--red-ryb);
-  color: var(--white-text);
-}
-.red-ryb {
-  background-color: var(--white-text);
-  color: var(--white-text);
-}
-
-.colour {
-  width: 16.666;
-  height: 80%;
-}
 
 .wrapper {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-top: 4%;
-  padding-bottom: 4%;
-  padding-left: 2%;
-  padding-right: 2%;
+	height: 100%;
+	width: 100%;
 }
+
 .avatars {
-  width: 100%;
-  height: 75%;
+	width: 100%;
+	height: 70%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	
 }
-.colours {
-  width: 100%;
-  height: 25%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-around;
+.avatar--container {
+	padding: 10px;
 }
+.avatar {
+	height: 200px;
+	width: 200px;
+}
+.dl-link-container {
+	text-decoration: underline;
+	text-decoration-style: dotted;
+}
+.colors {
+	height: 50%;
+}
+
+.ava-1 {
+  background-color: var(--eerie-black);
+  color: var(--text);
+  content: "Eerie black";
+}
+.ava-2 {
+  background-color: var(--dim-gray);
+  color: var(--text);
+  content: "Dim grey";
+}
+.ava-3 {
+  background-color: var(--blue-green);
+  color: var(--text);
+  content: "Blue-green";
+}
+.ava-4 {
+  background-color: var(--cinereous);
+  color: var(--text);
+  content: "Cinereous";
+}
+.ava-5 {
+  background-color: var(--red-pigment);
+  color: var(--text);
+  content: "Red pigment";
+}
+.icon-1 {
+  background-color: var(--eerie-black);
+  color: var(--text);
+  content: "Eerie black";
+}
+.icon-2 {
+  background-color: var(--red-pigment);
+  color: var(--text);
+  content: "Red pigment";
+}
+
