Make Alles colour better

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,8 +166,8 @@ h1 {
 	box-shadow: 5px 5px 0px 2px #29449f !important;
 }
 .alles {
-	background-color: #646560;
-	box-shadow: 5px 5px 0px 2px #3c3d3a !important;
+	background-color: #23539B;
+	box-shadow: 5px 5px 0px 2px #15325d !important;
 }
 
 @media (max-width: 600px) {
