--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -15,10 +15,13 @@
 	border: 0;
 	box-sizing: border-box;
 }
-html, body {
+
+html,
+body {
 	height: 100%;
 	width: 100%;
 }
+
 :root {
 	--primary-color: #031927;
 	--text-on-primary: #ffffff;
@@ -35,7 +38,9 @@ a {
 	transition-duration: 25ms;
 	text-decoration: none;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
 	color: var(--text-on-secondary);
 	text-decoration: underline;
 	cursor: pointer;
@@ -67,6 +72,7 @@ header {
 	color: var(--text-colour);
 	font-size: 2vw;
 }
+
 header h1 {
 	text-align: center;
 	font-weight: bold;
@@ -103,7 +109,9 @@ footer {
 	border-radius: 15px;
 	transition-duration: 200ms;
 }
-.card:hover, .card:focus {
+
+.card:hover,
+.card:focus {
 	box-shadow: 0px 0px 40px -3px rgba(40,40,40,1);
 }
 
@@ -116,13 +124,16 @@ footer {
 	align-items: center;
 	justify-content: flex-start;
 }
+
 .card-header-right {
 	padding: 1vw;
 }
+
 .card-title {
 	font-size: 130%;
 	font-weight: bold;
 }
+
 .card-date {
 	
 }
@@ -158,6 +169,7 @@ footer {
 	justify-content: flex-start;
 	
 }
+
 .card-tag {
 	width: auto;
 	padding-top: 2px;
@@ -174,6 +186,7 @@ footer {
 	color: var(--text-on-secondary);
 	font-weight: bold;
 }
+
 .card-footer {
 	display: flex;
 	flex-direction: row;
@@ -181,18 +194,22 @@ footer {
 	justify-content: flex-start;
 	padding-top: 8px;
 }
+
 .card-date {
 	font-size: 110%;
 	justify-self: flex-end;
 }
 
 /* ALLLL the media queries! */
+
 @media (min-width: 1500px) {
+	
 	header {
 		font-size: 0.5vw;
 		padding-top: 0.5%;
 		padding-bottom: 0.5%;
 	}
+	
 	footer {
 		font-size: 1vw;
 		padding-top: 1%;
@@ -207,11 +224,13 @@ footer {
 		padding-top: 1%;
 		padding-bottom: 1%;
 	}
+	
 	footer {
 		font-size: 1vw;
 		padding-top: 1%;
 		padding-bottom: 1%;
 	}
+	
 	.card {
 		height: 275px;
 		width: 375px;
@@ -219,30 +238,39 @@ footer {
 	.card-header {
 		font-size: 130%;
 	}
+	
 	.card-content {
 		font-size: 100%;
 		height: 60%;
 	}
+	
 	.card-tag {
 		font-size: 90%;
 	}
 }
+
 @media (max-width: 700px) {
+	
 	header {
 		font-size: 3vw;
 	}
+	
 	footer {
 		font-size: 2vw;
 	}
+	
 	.card-icon {
 		width: 50px;
 		height: 50px;
 	}
 }
+
 @media (max-width: 400px) {
+	
 	header {
 		font-size: 5vw;
 	}
+	
 	footer {
 		font-size: 5vw;
 	}
