--- a/datapacks/css/styles.css
+++ b/datapacks/css/styles.css
@@ -9,16 +9,20 @@
 **/
 
 /* setup */
+
 * {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	box-sizing: border-box;
 }
-html, body {
+
+html,
+body {
 	height: 100%;
 	width: 100%;
 }
+
 :root {
 	--primary-color: #3083dc;
 	--text-on-primary: #ffffff;
@@ -32,15 +36,18 @@ html, body {
 /* main styles */
 
 /* custom tooltips: https://codepen.io/shimdim/pen/NjyNNb */
+
 [class$="_icon"] {
 	color: var(--text-colour);
 	cursor: pointer;
 }
+
 [data-title] {
 	position: relative;
 	cursor: help;
 	text-decoration: underline dotted var(--text-on-secondary);
 }
+
 [data-title]::before {
 	opacity: 0%;
 	transition: opacity 500ms;
@@ -56,6 +63,7 @@ html, body {
 	font-family: sans-serif;
 	white-space: nowrap;
 }
+
 [data-title]:hover::before {
 	opacity: 100%;
 }
@@ -65,6 +73,7 @@ a {
 	transition-duration: 25ms;
 	text-decoration: none;
 }
+
 a:hover, a:focus {
 	color: var(--secondary-color);
 	text-decoration: underline;
@@ -96,10 +105,12 @@ header {
 	color: var(--text-colour);
 	font-size: 2vw;
 }
+
 header h1 {
 	text-align: center;
 	font-weight: bold;
 }
+
 #help-btn {
 	align-self: flex-end;
 	font-size: 120%;
@@ -136,7 +147,8 @@ footer {
 	border-radius: 2px;
 	transition-duration: 100ms;
 }
-.card:hover, .card:focus {
+.card:hover,
+.card:focus {
 	box-shadow: 0px 0px 40px -3px rgba(40,40,40,1);
 }
 
@@ -149,9 +161,11 @@ footer {
 	align-items: center;
 	justify-content: flex-start;
 }
+
 .card-header-right {
 	padding: 1vw;
 }
+
 .card-title {
 	font-size: 130%;
 	font-weight: bold;
@@ -187,6 +201,7 @@ footer {
 	justify-content: flex-start;
 	
 }
+
 .card-tag {
 	width: auto;
 	padding-top: 2px;
@@ -203,6 +218,7 @@ footer {
 	color: var(--text-on-secondary);
 	font-weight: bold;
 }
+
 .card-footer-bottom {
 	width: 100%;
 	height: 100%;
@@ -211,6 +227,7 @@ footer {
 	align-items: center;
 	justify-content: flex-start;
 }
+
 .card-btns {
 	flex: 1;
 	align-self: flex-end;
@@ -218,17 +235,21 @@ footer {
 	align-items: flex-end;
 	justify-content: center;
 }
+
 .card-btn {
 	flex: 1;
 }
 
 /* ALLLL the media queries! */
+
 @media (min-width: 1500px) {
+	
 	header {
 		font-size: 0.5vw;
 		padding-top: 0.5%;
 		padding-bottom: 0.5%;
 	}
+	
 	footer {
 		font-size: 1vw;
 		padding-top: 1%;
@@ -237,41 +258,53 @@ footer {
 }
 
 @media (min-width: 1000px) {
+	
 	header {
 		font-size: 1.5vw;
 		padding-top: 1%;
 		padding-bottom: 1%;
 	}
+	
 	footer {
 		font-size: 1vw;
 		padding-top: 1%;
 		padding-bottom: 1%;
 	}
 }
+
 @media (max-width: 700px) {
+	
 	header {
 		font-size: 3vw;
 	}
+	
 	footer {
 		font-size: 2vw;
 	}
+	
 	.card-icon {
 		width: 50px;
 		height: 50px;
 	}
+	
 	.card-tag {
 		font-size: 10px;
 	}
 }
+
 @media (max-width: 400px) {
+	
 	header {
 		font-size: 5vw;
 	}
+	
 	footer {
 		font-size: 5vw;
 	}
 }
+
 /* loader */
+
 .loader {
 	height: 100%;
 	width: 100%;
@@ -283,9 +316,12 @@ footer {
 	font-size: 5vw;
 	flex-wrap: wrap;
 }
-[v-cloak], .loader {
+
+[v-cloak],
+.loader {
 	display: none;
 }
+
 [v-cloak] .loader {
 	display: flex !important;
 }
